# contention-classification-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  mypy.ini  pyproject.toml
.github/: CODEOWNERS
.github/.github/: CODEOWNERS
.github/workflows/: build_and_push_to_ecr.yml  dependabot-auto-merge.yml  release.yml  test-code.yml  update-poetry-lock.yml  update-pre-commit.yml
.ipynb_checkpoints/: Dockerfile-checkpoint
cc-app/src/python_src/: api.py  pydantic_models.py
cc-app/src/python_src/util/: expanded_lookup_table.py
cc-app/tests/: test_claim_linker.py  test_data.py  test_expanded_lookup.py  test_logging.py
docs/: ml-classifier-config-endpoint.md
scripts/: start_server_linux.sh  start_server_windows.bat  start_server_windows.ps1  stop_server_linux.sh  stop_server_windows.ps1
src/: dev-requirements.txt  pydantic_models.py  requirements.txt
src/python_src/: api.py  pydantic_models.py
src/python_src/util/: SHA_VERIFICATION.md  ai_client.py  api_client.py  app_config.yaml  app_utilities.py  brd_classification_codes.py  classifier_utilities.py  expanded_lookup_config.py  expanded_lookup_table.py  logging_dropdown_selections.py  logging_utilities.py  lookup_table.py  lookup_tables_utilities.py  ml_classifier.py  ml_utilities.py  pull_api_documentation.py  s3_utilities.py  sanitizer.py  table_versions.py
src/python_src/util/.ipynb_checkpoints/: classifier_utilities-checkpoint.py
src/python_src/util/data/: lh_brd_classification_ids_test.json
src/python_src/util/data/condition_dropdown_lookup_table/: Contention dropdown to classification master - Dropdown Lookup v0.1.csv
src/python_src/util/data/dc_lookup_table/: Contention Classification Diagnostic Codes Lookup table master sheet - DC Lookup v0.3.csv  Contention Classification Diagnostic Codes Lookup table master sheet - DC Lookup v0.3Alt.csv  Contention Classification Diagnostic Codes Lookup table master sheet - DC Lookup v0.4.csv  [Release notes] Diagnostic Code to Classification mapping release notes - DC Lookup v0.6.csv
src/python_src/util/data/lh_brd_classification_ids/: README.md  ReadMe.md
src/python_src/util/data/master_taxonomy/: CC Taxonomy master - v0.1.csv  CC Taxonomy master - v0.3.csv  README.md  ReadMe.md  combined_df.csv
src/python_src/util/data/simulations/: 818.ipynb  README.md  classifiers.py  df_output-20250724-162715.csv  input_01.csv  inputs.csv  inputs_mini.csv  run_simulations.py
src/python_src/util/data/simulations/datadog/: README.md  extract-2025-06-23.csv
src/python_src/util/data/simulations/datadog/extracts/: 2025-06-23.csv  2025-07-02-failed-classifications.csv  2025-07-05-failed-classifications.csv
src/python_src/util/data/simulations/outputs/: ML_classifier_2025-06-13_19-18-39.csv  ML_classifier_2025-06-13_19-18-39_scores.txt  aggregate_predictions_2025-06-13_19-18-39.csv  aggregate_predictions_2025-06-16_17-54-29.csv  aggregate_predictions_2025-06-23_11-45-57.csv  aggregate_predictions_2025-06-23_14-36-59.csv  aggregate_predictions_2025-06-24_14-23-38.csv  aggregate_predictions_2025-06-24_15-19-45.csv  aggregate_predictions_2025-06-24_15-58-07.csv  csv_lookup_2025-06-13_19-18-39.csv  csv_lookup_2025-06-13_19-18-39_scores.txt  csv_lookup_2025-06-23_11-45-57.csv  csv_lookup_2025-06-23_14-36-59.csv  csv_lookup_2025-06-23_14-36-59_metrics.txt  csv_lookup_2025-06-24_15-19-45.csv  csv_lookup_2025-06-24_15-19-45_metrics.txt  csv_lookup_2025-06-24_15-58-07.csv  ml_classifier_2025-06-23_11-45-57.csv  ml_classifier_2025-06-23_14-36-59.csv  ml_classifier_2025-06-23_14-36-59_metrics.txt  ml_classifier_2025-06-24_14-23-38_metrics.txt  ml_classifier_2025-06-24_15-19-45.csv  ml_classifier_2025-06-24_15-58-07.csv  ml_classifier_2025-07-07_15-53-57.csv  ml_classifier_2025-07-07_15-56-01.csv  ml_classifier_2025-07-07_16-45-01.csv  ml_classifier_2025-07-07_18-42-39.csv  production_classifier_2025-06-12_11-04-40.csv  production_classifier_2025-06-12_11-04-40_scores.csv  respiratory_classification_always_2025-06-12_11-04-40.csv  respiratory_classification_always_2025-06-12_11-04-40_scores.csv  respiratory_classifier_2025-06-13_19-18-39.csv  respiratory_classifier_2025-06-13_19-18-39_scores.txt  respiratory_classifier_2025-06-23_11-45-57.csv  respiratory_classifier_2025-06-23_11-45-57_metrics.txt  skin_classifiction_always_2025-06-12_11-04-40.csv  skin_classifiction_always_2025-06-12_11-04-40_scores.csv
src/util/: app_config.yaml  app_utilities.py  brd_classification_codes.py  logging_utilities.py  lookup_table.py  lookup_tables_utilities.py  ml_classifier.py  pull_api_documentation.py  sanitizer.py
src/util/data/condition_dropdown_coverage/: [Release notes] Auto-suggestions release notes - Suggested Conditions v1.2 Flat.csv
src/util/data/condition_dropdown_lookup_table/: Contention dropdown to classification master - Dropdown Lookup v0.2.csv  [Release notes] Contention Text to Classification mapping release notes - Contention Text Lookup v0.5.csv
src/util/data/dc_lookup_table/: Contention Classification Diagnostic Codes Lookup table master sheet - DC Lookup v0.3Alt.csv
src/util/data/lh_brd_classification_ids/: README.md
src/util/data/master_taxonomy/: CC Taxonomy master - v0.2.csv  README.md
src/util/data/simulations/: classifiers.py  run_simulations.py
tests/: conftest.py  test_ai_client.py  test_api_client.py  test_app_utilities.py  test_app_utilities_ml_reinitialize.py  test_brd_classification_codes.py  test_claim_linker.py  test_classifier_utilities.py  test_data.py  test_expanded_lookup.py  test_expired_classification.py  test_health_check.py  test_logging.py  test_logging_dropdown_selections.py  test_logging_lookup.py  test_lookup_table.py  test_ml_classification_endpoint.py  test_ml_classifier.py  test_ml_classifier_config_endpoint.py  test_ml_utilities.py  test_multicontention_claims.py  test_run_simulations.py  test_s3_utilities.py  test_sanitizer.py  test_sha_verification.py  test_simulation_classifiers.py  test_v03_taxonomy.py
