[project]
name = "contention-classification-api"
version = "0.1.0"
description = "API for classifying contentions from 526 submissions"
authors = [{name = "Department of Veterans Affairs"}]
readme = "README.md"
license = "CC0-1.0"
keywords = ["veterans", "contention", "classification", "api", "fastapi"]
requires-python = ">= 3.12"
dynamic = ["dependencies"]

[project.urls]
homepage = "https://github.com/department-of-veterans-affairs/contention-classification-api"
repository = "https://github.com/department-of-veterans-affairs/contention-classification-api"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "contention-classification-api"
version = "0.1.0"
description = "API for classifying contentions from 526 submissions"
authors = ["Department of Veterans Affairs"]
packages = [{include = "python_src", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
poetry = "^2.1"
fastapi = "0.116.1"
httpx = "0.28.1"
onnx = "1.19.0"
onnxruntime = "1.22.1"
pandas = "^2.3.2"
pydantic = "2.11.7"
pyyaml = "6.0.2"
scikit-learn = "^1.7.1"
uvicorn = {extras = ["standard"], version = "0.35.0"}
boto3 = "^1.40.24"

[tool.poetry.group.dev.dependencies]
mypy = "1.17.1"
pre-commit = "4.3.0"
ruff = "0.12.12"
pytest = "8.4.2"
pytest-cov = "6.2.1"
bandit = {version = "1.8.6", extras = ["toml"]}
types-pyyaml = "6.0.12.20250822"

[tool.pytest.ini_options]
addopts = "-ra --cov=./src --cov-fail-under=80 --no-cov-on-fail --cov-report=term:skip-covered --cov-report=html:build/reports/coverage --cov-branch"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/python_src/util/pull_api_documentation.py"]

[tool.ruff]
line-length = 127
target-version = "py312"
exclude = [".git", "__pycache__", "build", "dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = []

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
line-ending = "lf"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true
exclude = ["scripts"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]
